# micropolis_lidar_mapping

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
docker/: run_pipeline.sh
docs/: architecture.md  challenges.md  evaluation.md  method.md
gnss_fusion/: CMakeLists.txt  package.xml  params_fusion.yaml
gnss_fusion/include/gnss_fusion/: pose_graph.hpp
gnss_fusion/src/: pose_graph.cpp
gnss_fusion/src/tools/: regen_map.cpp  run_fusion.cpp
gnss_fusion/test/: test_pose_graph_jac.cpp
lidar_mapper/: CMakeLists.txt  package.xml  params.yaml
lidar_mapper/eval/: evaluate.py  plot_map_trajectory.py  requirements.txt
lidar_mapper/include/lidar_mapper/: bag_stream.hpp  deskew.hpp  odometry.hpp  pcd_io.hpp  point_cloud.hpp  registration.hpp  se3.hpp  tum_io.hpp  voxel_map.hpp  world_map.hpp
lidar_mapper/src/: bag_stream.cpp  deskew.cpp  odometry.cpp  pcd_io.cpp  point_cloud.cpp  registration.cpp  tum_io.cpp  voxel_map.cpp
lidar_mapper/src/tools/: export_gt.cpp  inspect_bags.cpp  run_odometry.cpp
lidar_mapper/test/: test_tum_io.cpp
