<?xml version="1.0"?>
<package format="3">
  <name>gnss_fusion</name>
  <version>0.0.1</version>
  <description>GNSS pose-graph fusion (Variant B) — consumes lidar_mapper odometry + GNSS priors.</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>lidar_mapper</depend>
  <depend>rclcpp</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rosbag2_storage</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>eigen</depend>
  <depend>yaml-cpp</depend>
  <exec_depend>rosbag2_storage_mcap</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
